21_sep/networking/resources.yml
#Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: example-app

---
#service account

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: example-app
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetport: 8080

---
#db service

apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: example-app
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetport: 5432

---
# frontend development (sleeping containers we will exec into )
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: curlimages/curl:8.3.0
        command: ["sh", "-c" ,"sleep 3600"]
